--- a/ui/html/base.layout.tmpl
+++ b/ui/html/base.layout.tmpl
@@ -15,17 +15,23 @@
             <h1><a href='/'>Snippetbox</a></h1>
         </header>
         <nav>
-            <!-- Update the navigation to include signup, login and logout links -->
             <div>
                 <a href='/'>Home</a>
-                <a href='/snippet/create'>Create snippet</a>
+                <!-- Toggle the navigation link -->
+                {{if .IsAuthenticated}}
+                    <a href='/snippet/create'>Create snippet</a>
+                {{end}}
             </div>
             <div>
-                <a href='/user/signup'>Signup</a>
-                <a href='/user/login'>Login</a>
-                <form action='/user/logout' method='POST'>
+                <!-- Toggle the navigation links -->
+                {{if .IsAuthenticated}}
+                    <form action='/user/logout' method='POST'>
                     <button>Logout</button>
-                </form>
+                    </form>
+                {{else}}
+                    <a href='/user/signup'>Signup</a>
+                    <a href='/user/login'>Login</a>
+                {{end}}
             </div>
         </nav>
         <main>
