--- a/ui/html/base.layout.tmpl
+++ b/ui/html/base.layout.tmpl
@@ -26,7 +26,8 @@
                 <!-- Toggle the navigation links -->
                 {{if .IsAuthenticated}}
                     <form action='/user/logout' method='POST'>
-                    <button>Logout</button>
+                        <input type='hidden' name='csrf_token' value='{{.CSRFToken}}'>
+                        <button>Logout</button>
                     </form>
                 {{else}}
                     <a href='/user/signup'>Signup</a>
